# X-Agent

./: .env  .env.example  .gitignore  README.md  app.py  callbacks.py  chatbox.py  llm_factory.py  pyproject.toml  sidebar.py  tools.py  utility.py
.streamlit/: config.toml
agent/: agent_utils.py
core/: agent.py  callbacks.py  llm.py  prompts.py  twitter_tool.py
fetcher/: twitter_api.py  twitter_scraper.py
src/: .gitignore  agent.py  pyproject.toml  server.py  webui.py  x_mcp.json
src/static/: styles.css
src/templates/: index.html
strategies/: api_strategy.py  playwright_strategy.py
tests/: test_scraper.py
tools/: __init__.py  tools.py
ui/: chatbox.py  sidebar.py
utilities/: constants.py  utility.py
