[project]
name = "x-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.25.1",
    "langchain>=1.0.5",
    "langchain-openai>=1.0.2",
    "playwright>=1.56.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
]
