[project]
name = "x-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.19.0",
    "langchain>=0.3.0,<0.4.0",
    "langchain-openai>=0.2.0,<0.3.0",
    "playwright>=1.49.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "streamlit>=1.40.0",
]
